main.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* END CSS RESET */

*,
*:before,
*:after
{
  box-sizing: border-box;
}

body
{
  margin: 0;
  min-width: 20rem;

  font-family: 'Anonymous Pro', monospace;
}
img
{
  display: block;

  max-width: 100%;
  max-height: 100%;
}

hr
{
  margin: 0;
  margin-bottom: 2rem;

}

.container+.container
{
  border-top: solid 2rem grey;
}

.big-header
{
  display: flex;
  align-items: center;
  justify-content: center;

  padding: 2rem;

  background: linear-gradient(120deg, black 0%, #672748 100%);
}
.big-header .card
{
  padding: 1rem;
  max-width: 40rem;

  background: white;
}
.big-header .card-inner
{
  border: solid 0.25rem black;
}
.big-header .title,
.big-header .detail
{
  display: block;
  padding: 0.5rem 1rem;
}
.big-header h1
{
  font-size: 2.2rem;
}
.big-header .gimmick-inner img
{
  margin-left: auto;
  margin-right: auto;
}
.big-header .name
{
  font-size: 1.4rem;
}
.big-header .detail
{
  position: relative;

  padding: 1.5rem 1.5rem 1rem 1.5rem;
}
.big-header a.detail
{
  color: inherit;

  transition: background 0.5s ease;
}
.big-header a.detail:hover
{
  background: #ccc;
}
.big-header .label
{
  position: absolute;
  top: 0.5rem;
  left: 0.5rem;

  font-family: 'Oswald', sans-serif;
  font-size: 0.75em;
  text-decoration: none;
  text-transform: uppercase;
}
.big-header .secondary
{
  padding-bottom: 0.5rem;
}

.float-header
{
  position: relative;
  display: block;

  color: inherit;
  text-decoration: none;
}

.float-header .svgs
{
  position: absolute;
}
.float-header .svgs img
{
  display: block;

  margin-top: 0.5rem;
  width: 2rem;
  height: 2rem;
}

.float-header h1
{
  font-size: 3rem;
}
.float-header header
{
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  padding-left: 3rem;

  border-bottom: solid 0.15rem black;
}
.float-header .name
{
  font-size: 1.4rem;
}

.big-header h1,
.float-header h1
{
  margin-bottom: 1rem;
  
  font-weight: bold;
}

.main h2,
.main h3,
.main h4,
.main p,
.main ol,
.main ul,
.main pre,
.main hr,
.main figure
{
  margin-bottom: 2rem;
}
.main li+li
{
  margin-top: 1rem;
}
.main h2
{
  font-size: 2rem;
  font-weight: bold;
}
.main h3
{
  font-size: 1.5rem;
  font-weight: bold;
}
.main h4
{
  font-size: 1.3rem;
}
.main header p
{
  margin-top: -1.5rem;
  
  font-size: 1.2rem;
  font-style: italic;
}
.main p,
.main ol,
.main ul,
.main pre
{
  font-family: 'Open Sans', sans-serif;
  line-height: 1.4;
}
.main ol,
.main ul
{
  list-style-position: inside;
}
.main li > ol,
.main li > ul
{
  margin-bottom: 0;
  padding-left: 1.5rem;
}
.main ul
{
  list-style-type: square;
}
.main ol
{
  list-style-type: decimal;
}
.main pre
{
  padding: 1rem 1.5rem;
  max-height: 80vh;

  overflow-x: auto;
  
  background: #ccc;
  font-family: 'Anonymous Pro', monospace;
}
.main a[href]
{
  color: #672748;
  font-weight: bold;
  text-decoration: underline;
}
.main em
{
  font-style: italic;
}
.main strong
{
  font-weight: bold;
}
.main code
{
  padding: 0.2rem 0.5rem;

  background: #ccc;
  font-family: 'Anonymous Pro', monospace;
}
.main pre code
{
  padding: 0;
  
  background: none;
}
.main figure img
{
  margin-bottom: 0.5rem;
}
.main hr
{
  margin-top: 0;
  border: none;
  border-bottom: solid 0.15rem black;
}
.main > *:last-child
{
  margin-bottom: 0;
}

.page .container-inner
{
  padding: 2rem;
  padding-bottom: 6rem;
}

@media (min-width: 40rem)
{
  .container+.container
  {
    border-top-width: 5rem;
  }

  .big-header
  {
    min-height: 100vh;
  }
  .big-header .primary
  {
    display: flex;
    flex-direction: row;
  }
  .big-header .gimmick-inner
  {
    width: 20rem;
    height: 14rem;
  }
  .big-header .title
  {
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    justify-content: flex-end;

    border-left: solid 0.15rem black;
    padding: 0;
  }
  .big-header .secondary,
  .big-header .detail+.detail
  {
    border-top: solid 0.15rem black;
  }
  .big-header h1,
  .big-header .name
  {
    padding: 1rem;
  }
  .big-header h1
  {
    margin-bottom: 0;

    font-size: 3rem;
  }
  .big-header .name
  {
    border-top: solid 0.15rem black;
  }
  .big-header .secondary
  {
    display: flex;
    padding-bottom: 0;
  }
  .big-header .detail
  {
    flex-grow: 1;
  }
  .big-header .detail+.detail
  {
    border-top: none;
    border-left: solid 0.15rem black;
  }

  .float-header
  {
    float: left;

    margin-right: 3rem;
  }
  .float-header .svgs
  {
    right: 100%;
    left: -3.5rem;

    padding-right: 1.5rem;
  }
  .float-header header
  {
    padding-left: 0;
  }

  .page .container-inner
  {
    margin-left: auto;
    margin-right: auto;
    padding: 4rem;
    max-width: 48rem;
  }
}

